<resources>
    <string name="app_name">muZak</string>
    <string name="welcome_dialog_title">Welcome to muZak!</string>
    <string name="welcome_dialog_message">muZak can automatically download artist information from Last.fm. Would you like to enable this feature?\n\n(This can be changed later in Settings.)</string>

    <string name="settings">Settings</string>
    <string name="play">Play</string>
    <string name="add">Add</string>
    <string name="add_as_next">Add As Next</string>
    <string name="toggle_view_mode">Toggle View Mode</string>
    <string name="added">Added!</string>
    <string name="added_as_next">Added as next!</string>
    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>
    <string name="filter">Filter</string>
    <string name="filter_hint_text">Filter this list</string>
    <string name="search_hint_text">Search all music</string>
    <string name="last_fm_info">Last.fm Information</string>

    <plurals name="num_of_albums">
        <item quantity="one">%1$d album</item>
        <item quantity="other">%1$d albums</item>
    </plurals>

    <plurals name="num_of_tracks">
        <item quantity="one">%1$d track</item>
        <item quantity="other">%1$d tracks</item>
    </plurals>

    <string name="num_selected">%1$d selected</string>

    <!-- Equalizer -->
    <string name="equalizer">Equalizer</string>
    <string name="preset">Preset:</string>
    <string name="custom">Custom</string>
    <string name="enabled">Enabled</string>
    <string name="sound_settings">Sound Settings</string>

    <!-- Playing Now -->
    <string name="blank_time">--:--</string>
    <string name="empty_playlist">The playlist is empty.</string>
    <string name="playing_now">Playing Now</string>
    <string name="playlist">Playlist</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="pause">Pause</string>
    <string name="shuffle">Shuffle</string>
    <string name="repeat">Repeat</string>

    <!-- Media Sync -->
    <string name="syncing_with_media_store">Syncing with media store…</string>
    <string name="fetching_artist_info">Retrieving artist info…</string>
    <string name="updating_artist_albums">Updating album info…</string>
    <string name="searching_for_album_art">Searching for cover art…</string>

    <!-- Repeat Modes -->
    <string name="off">Off</string>
    <string name="track">Track</string>
    <string name="stop">Stop</string>
    <string name="choose_repeat_mode">Select a repeat mode:</string>
    <string name="cancel">Cancel</string>

    <!-- Shuffle -->
    <string name="choose_shuffle_mode">What would you like to shuffle?</string>
    <string name="remaining">Remaining</string>
    <string name="all">All</string>

    <!-- Edit Playlist -->
    <string name="edit_playlist">Edit Playlist</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="unsaved_changed">Unsaved changes</string>
    <string name="unsaved_changes_warning">Your changes have not been saved! Would you like to save them now?</string>
    <string name="save">Save</string>

    <!-- Preferences -->
    <string name="database_tasks">Database Tasks</string>
    <string name="refresh_artists">Refresh Artists</string>
    <string name="refresh_artists_desc">Search for new artists in the media store</string>
    <string name="refresh_albums">Refresh Albums</string>
    <string name="refresh_albums_desc">Refresh the cover art for all albums; will also remove artists that have no albums</string>
    <string name="app_settings">App Settings</string>
    <string name="auto_hide_overlays_desc">Automatically hide overlays after 5 seconds when playing</string>
    <string name="auto_hide_overlays">Hide Playing Now Overlays</string>
    <string name="start_location">Start Location</string>
    <string name="last_fm_integration_desc">Retrieve artist information from Last.fm</string>
    <string name="last_fm_integration">Enable Last.fm integration</string>
    <string name="search_for_art_desc">Scan folders of albums without art for images and set the largest image as the album art</string>
    <string name="search_for_art">Search For Missing Art</string>

    <!-- About -->
    <string name="about">About</string>
    <string name="app_license">muZak is a music player app for Android, developed by Lenworth Rose. Copyright 2015 Lenworth Rose\n\nLicensed under the Apache License, Version 2.0 (the "License"); you may not use this file except in compliance with the License. You may obtain a copy of the License at\n\n<a href="http://www.apache.org/licenses/LICENSE-2.0">http://www.apache.org/licenses/LICENSE-2.0</a>\n\nUnless required by applicable law or agreed to in writing, software distributed under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.</string>
    <string name="attribution_dragsortlistview">muZak uses DragSortListView to support playlist editing. The DragSortListView library was created by Carl Bauer, and it is used under Apache License Version 2.0. You can find more information about DragSortListView - including the license text - at its github repository: <a href="https://github.com/bauerca/drag-sort-listview">https://github.com/bauerca/drag-sort-listview</a></string>
    <string name="attribution_stickygridheaders">muZak uses StickyGridHeaders on the search results page. The StickyGridHeaders library was created by Tonic Artos, and it is used under Apache License Version 2.0. You can find more information about DragSortListView - including the license text - at its github repository: <a href="https://github.com/TonicArtos/StickyGridHeaders">https://github.com/TonicArtos/StickyGridHeaders</a></string>
    <string name="attribution_glide">muZak uses Glide to load images. The Glide library was created by Sam Judd, and it is used under Apache License Version 2.0. You can find more information about Glide - including the license text - at its repository: <a href="https://github.com/bumptech/glide">https://github.com/bumptech/glide</a></string>
    <string name="attribution_touchimageview">muZak uses TouchImageView to provide scroll and zoom functionality in the Image Viewer. TouchImageView was created by Mike Ortiz, with contributions by Patrick Lackemacher, Babay88, @ipsilondev, hank-cp, and singpolyma. You can find more information about TouchImageView - including the license text and source code - at its repository: <a href="https://github.com/MikeOrtiz/TouchImageView">https://github.com/MikeOrtiz/TouchImageView</a></string>
    <string name="attribution_pagerslidingtabstrip">muZak uses PagerSlidingTabStrip to provide tabs on the Playing Now and Theater Remote pages. PagerSlidingTabStrip was created by Andreas Stuetz. You can find more information about PagerSlidingTabStrip - including the license text and source code - at its repository: <a href="https://github.com/astuetz/PagerSlidingTabStrip">https://github.com/astuetz/PagerSlidingTabStrip</a></string>
    <string name="version_info">muZak v%1$s</string>
    <string name="source_location">The source for muZak can be found here: <a href="https://github.com/lenworthrose/music-apps">https://github.com/lenworthrose/music-app</a></string>
</resources>
