<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="5dp">

            <TextView
                android:id="@+id/about_version"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="6dp"
                android:layout_marginTop="6dp"
                android:background="?colorAccent" />

            <TextView
                android:id="@+id/about_link1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_license" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="6dp"
                android:layout_marginTop="6dp"
                android:background="?colorAccent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/source_location" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="6dp"
                android:layout_marginTop="6dp"
                android:background="?colorAccent" />

            <TextView
                android:id="@+id/about_link2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/attribution_dragsortlistview" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="6dp"
                android:layout_marginTop="6dp"
                android:background="?colorAccent" />

            <TextView
                android:id="@+id/about_link3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/attribution_stickygridheaders" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="6dp"
                android:layout_marginTop="6dp"
                android:background="?colorAccent" />

            <TextView
                android:id="@+id/about_link4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/attribution_glide" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="6dp"
                android:layout_marginTop="6dp"
                android:background="?colorAccent" />

            <TextView
                android:id="@+id/about_link5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/attribution_touchimageview" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="6dp"
                android:layout_marginTop="6dp"
                android:background="?colorAccent" />

            <TextView
                android:id="@+id/about_link6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="6dp"
                android:text="@string/attribution_pagerslidingtabstrip" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
